<resources>
    <string name="app_name">Grab&amp;Go Business</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading...</string>
    <string name="toast_image_intent_null" />
    <string name="splash_text">Restaurant App</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="type_here">Type here</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_emailid">Enter Email Id</string>
    <string name="enter_email_id">Enter restaurant ID</string>
    <string name="login_your_account">Please login your account</string>
    <string name="add_location">Add Location</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'YIN\'.</string>
    <string name="permission_required_toast">Location permission is required</string>
    <string name="lbl_set_profile_photo">Select image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="select_image">Select Image</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="failed_upload_image">Failed to upload</string>
    <string name="something_went_wrong_message">Something went wrong</string>
    <string name="no_internet">No Internet</string>
    <string name="no_google_playservice_available">No google play services available</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="new_order">New Orders</string>
    <string name="todays_revenue">Today’s revenue</string>
    <string name="week_revenue">Week’s revenue</string>
    <string name="order_id">Order ID : </string>
    <string name="placed">Placed at :</string>
    <string name="item">items</string>
    <string name="decline">Decline</string>
    <string name="confirm">Confirm</string>
    <string name="item_details"><![CDATA[Items & Price details]]></string>
    <string name="cooking_instruction">Cooking instruction</string>
    <string name="sub_total">Subtotal</string>
    <string name="packaging_charges">Packaging Charges</string>
    <string name="vat">VAT@18%</string>
    <string name="total">Total</string>
    <string name="payment_mode">Payment mode</string>
    <string name="mark_delivered">Mark delivered</string>
    <string name="mark_ready">Mark Ready</string>
    <string name="preparing">Preparing</string>
    <string name="prepare_time">Est. remaining Time</string>
    <string name="delivered">Delivered</string>
    <string name="add_new_category">Add new category</string>
    <string name="enter_category">Enter category name</string>
    <string name="enter_here">Eg. Rice, Drinks, Ice cream</string>
    <string name="submit">Submit</string>
    <string name="add_new_item">Add new item</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="address">Address</string>
    <string name="restaurant_id">Restaurant ID</string>
    <string name="contact">Contact no.</string>
    <string name="logout">Log out account</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Item Description</string>
    <string name="enter_title">Enter title</string>
    <string name="item_price">Item price</string>
    <string name="enter_price">Enter price</string>
    <string name="add_item">Add item in menu</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non Veg</string>
    <string name="meal_type">Meal type</string>
    <string name="add_picture">Add picture</string>
    <!--Network Static messages-->
    <string name="NetworkError">No Network Available</string>
    <string name="ServerError">Server Response Timeout</string>
    <string name="ServerInternalError">Server Internal Error</string>
    <string name="AuthFailedError">Server Authentication Failed</string>
    <string name="ParseError">Parsing Error</string>
    <string name="NoConnectionError">No Connection available to Host</string>
    <string name="TimeOutError">Server Timeout Error</string>
    <string name="ErrorResponseData">Error Response Data</string>
    <string name="UnknownError">Unknown Error Response</string>
    <string name="UnexpectedResponse">Unexpected response</string>
    <string name="appExitText">Do you really want to exit ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="not_valid_model">Not a valid Model</string>
    <string name="past_order">Past orders</string>
    <string name="current_order">Current orders</string>
    <string name="est_time">Est. Preparation Time :</string>
    <string name="pleaseFillMandatoryDetails">*Please fill mandatory fields</string>
    <string name="pleaseFillpassword">*Please Give Password</string>
    <string name="emailNotValid">Email_ID not VALID</string>
    <string name="password_error">Password Required</string>
    <string name="loggin">Logging...</string>
    <string name="getting_profile">Getting Profile...</string>
    <string name="emptyList">Empty List</string>
    <string name="not_available">"Sorry! Data not available "</string>
    <string name="order_details">Order Details</string>
    <string name="status">Status</string>
    <string name="item_name_ar">Item Arabic name</string>
    <string name="item_description_ar">Item Arabic Description</string>
    <string name="select_status">Select Status</string>
    <string name="enter_category_ar">Enter category Arabic name</string>
    <string name="active">Active</string>
    <string name="inactive">InActive</string>
    <string name="menu_create_successfully">"Menu created successsfully "</string>
    <string name="logingout">Logging out...</string>
    <string name="appLogoutText">Are you sure ? You want to Logout</string>
    <string name="please_wait">Please wait...</string>
    <string name="select_type">Select Type</string>
    <string name="order_confirm">"Order Confirmed "</string>
    <string name="select_category">Select category</string>
    <string name="cod">COD</string>
    <string name="online">Online</string>
    <string name="no_orders">Sorry ! You don\'t have any orders</string>
    <string name="sar">SAR</string>
    <string name="select_menu_type">Select menu type</string>
    <string name="discount">Discount</string>

</resources>