<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_8sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.sa.grabgo.vendor.view.AppTextView_SubTitle
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/preparing"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:background="@color/light_yellow"
                android:textAppearance="@style/SmallMediumText"
                android:textColor="@color/white"/>
            <com.sa.grabgo.vendor.view.AppTextView_SubTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/prepare_time"
                android:textAppearance="@style/SmallerText"
                android:textColor="@color/sub_color"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.sa.grabgo.vendor.view.AppTextView_SubTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:textAppearance="@style/SmallMediumText"
                android:textColor="@color/semi_color"/>
            <com.sa.grabgo.vendor.view.AppTextView_SubTitle
                android:id="@+id/tv_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="214562"
                android:textAppearance="@style/SmallMediumText"
                android:textColor="@color/semi_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">
            <com.sa.grabgo.vendor.view.AppTextView_SubTitle
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placed"
                android:textAppearance="@style/SmallerText"
                android:textColor="@color/semi_color"/>
            <com.sa.grabgo.vendor.view.AppTextView_SubTitle
                android:id="@+id/tv_order_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:text="12:45 pm , 21 Sept 2021"
                android:textAppearance="@style/SmallerText"
                android:textColor="@color/semi_color"/>
        </LinearLayout>


            <com.sa.grabgo.vendor.view.AppTextView_SubTitle
                android:id="@+id/tv_total_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item"
                android:textColor="@color/semi_color"
                android:textAppearance="@style/SmallestSizeText"/>


        <LinearLayout
            android:id="@+id/ln_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_order_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ImageView
            android:id="@+id/view_path"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_below="@+id/ln_recycler"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/path_view" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_10sdp">
            <com.sa.grabgo.vendor.view.AppTextView_SubTitle
                android:id="@+id/tv_order_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_delivery"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/mark_delivered"
                android:textAppearance="@style/SmallMediumText"
                android:textColor="@color/semi_color"
                android:textStyle="bold"/>

            <com.sa.grabgo.vendor.view.AppTextView_SubTitle
                android:id="@+id/tv_order_ready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_80sdp"
                android:drawableLeft="@drawable/ic_mark_prepare"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/mark_ready"
                android:textAppearance="@style/SmallMediumText"
                android:textColor="@color/semi_color"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>